--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 [dependencies]
 cgmath = "0.17"
-rand = "0.6"
-num_cpus = "1.10"
-rayon = "1.0"
+rand = "0.7"
+num_cpus = "1.12"
+rayon = "1.3"
+tobj = {version = "0.1", features = ["log"]}
+log = "0.4"
+env_logger = "0.7"
